1998-08-12  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* tclObjc.m: Include avcall.h or ffi.h per BUGGY_BUILTIN_APPLY
	and USE_AVCALL.
	(tclObjc_msgSendToClientData): Add support for 
	(getObjectReturn, getPointerReturn, getIntegerReturn, 
	getUIntegerReturn, getShortReturn, getUShortReturn, getLongReturn,
	getULongReturn, getCharReturn, getUCharReturn, getStringReturn, 
	getFloatReturn, getDoubleReturn): Add support for libffi and avcall for
	when __builtin_apply is buggy.
	(getPointerReturn): Return void * instead of unsigned.
	(tclObjc_msgSendToClientData): Use %p instead of %x for pointer,
	per POINTER_FMT_HEX_PREFIX.
	(tclObjc_msgSendToClientData): Use ffi_type_uint for _C_UCHR.
	Move prep_cif immediately before ffi_call.
	Add casts as appropriate to resultString sprintf arguments.
	(getUCharReturn): Cast to unsigned int, not unsigned char
	in libffi case.

	* Makefile.am (FFIINCLUDES): New substituted variable.
	(INCLUDES): Add FFIINCLUDES.

1998-08-11  Marcus G. Daniels  <mgd@helen.santafe.edu>

	* Makefile.am: Add SUFFIXES = .m since we aren't including 
	Makefile.rules.  (tclobjc_HEADERS): Add tclObjc.h.

	* tclObjc.m: Include swarmconfig.h instead of config.h.

	* List.m: Include stdlib.h.

	* TclInterp.m: Include string.h.

	* TkInterp.m: Include unistd.h.

	* tclObjc.m: Include stdlib.h and string.h.

1998-08-10  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* tclObjc.h: Renamed from tclObjc.h.in; no longer an extracted file.
	(TCLOBJC_VERSION): Bump to 1.4.

	* tclObjc.m: Include config.h.

1998-07-22  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* tclObjc.m (ATDELIMCHAR): Switch back to `@', until BLT 2.4 is
	for real.

1998-07-21  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* configure.in (INCPLACES, LIBPLACES): Add /Cygnus/B19/{include,lib}.

1998-07-19  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* tclObjc.m (ATDELIMCHAR): New macro.  Used in 
	tclObjc_objectToName and tclObjcToObject as delimiter between